--- a/hra.html
+++ b/hra.html
@@ -40,15 +40,12 @@
           <ul>
             <li>Protože se hra jmenuje dáma, tak v této verzi není dáma vůbec zavedena: Vyhrává hráč, kterému zůstane nejvíc kamenů v momentě, když už jeden z hráčů nemůže provést žádný tah</li>
             <li>V této variantě začíná černý hráč, protože jsem prohodil barvy a jsem líný to předělávat</li>
-            <form>
-              <input type="radio" id="hrac1" name="hrac" value="1">
-              <label for="hrac1">Hráč1-černý</label><br>
-              <input type="radio" id="hrac2" name="hrac" value="2">
-              <label for="hrac2">Hráč2-bílý</label><br>
-              <input type="radio" id="other" name="hrac" value="3" >
-              <label for="other">Jiná možnost snad není</label>
-            </form>
           </ul>
+          <h4>Na tahu je:</h4>
+          <ol>
+            <li id="hrac1" >Černý</li>
+            <li id="hrac2" >Bílý</li>
+          </ol>
 <button type="button" name="tahovac" onclick="endTurn()"> Konec tahu</button>
 <button type="button" name="unselect" onclick="unselect()">Zruš výběr políčka</button>
         </header>
